--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 cachetools==5.5.2
 certifi==2025.6.15
 charset-normalizer==3.4.2
+contourpy==1.3.2
+cycler==0.12.1
+fonttools==4.58.4
 google-api-core==2.25.1
 google-api-python-client==2.174.0
 google-auth==2.40.3
@@ -9,17 +12,24 @@ google-auth-oauthlib==1.2.2
 googleapis-common-protos==1.70.0
 httplib2==0.22.0
 idna==3.10
+kiwisolver==1.4.8
+matplotlib==3.10.3
 numpy==2.3.1
 oauthlib==3.3.1
 opencv-python==4.11.0.86
+packaging==25.0
+pillow==11.2.1
 proto-plus==1.26.1
 protobuf==6.31.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 requests==2.32.4
 requests-oauthlib==2.0.0
 rsa==4.9.1
+scipy==1.16.0
+six==1.17.0
 uritemplate==4.2.0
 urllib3==2.5.0
